crates/gala-driver/tests/snapshots/snapshot_tests__classical_arithmetic_gir.snap
---
source: crates/gala-driver/tests/snapshot_tests.rs
expression: gir
---
{
  "num_funcs": 1,
  "num_types": 0,
  "num_consts": 0
}
