crates/gala-driver/tests/snapshots/snapshot_tests__quantum_bell_gir.snap
---
source: crates/gala-driver/tests/snapshot_tests.rs
assertion_line: 24
expression: gir
---
{
  "num_funcs": 1,
  "num_nodes": 4,
  "num_types": 1,
  "num_consts": 0
}
