crates/gala-driver/tests/snapshots/snapshot_tests__simple_pure_gir.snap
---
source: crates/gala-driver/tests/snapshot_tests.rs
assertion_line: 16
expression: gir
---
{
  "num_funcs": 1,
  "num_nodes": 0,
  "num_types": 1,
  "num_consts": 0
}
